products/blanner/deploy/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blanner-backend
spec:
  selector:
    app: blanner-backend
  ports:
    - port: 8080
      targetPort: 8080
