products/blanner/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blanner
spec:
  ingressClassName: nginx
  rules:
    - host: api.blanner.nafura.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blanner-backend
                port:
                  number: 8080
